src/assets/css/crew.css
@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Barlow+Condensed&family=Bebas+Neue&family=Bellefair&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

/* font-family: 'ADLaM Display', cursive;
font-family: 'Barlow Condensed', sans-serif;
font-family: 'Bebas Neue', sans-serif;
font-family: 'Bellefair', serif;
font-family: 'Roboto', sans-serif; */

*,*::before,*::after{
    box-sizing: border-box;
}

:root{
    /* color variables */

    --main-color:rgba(255, 255, 255);
    --secondary-color:#D0D6F9;
    --miscellaneous-color:#0B0D17;

    /*other sizings */
    --circle-radius:274px;
}

body{
    margin: 0;
    padding: 0;
    height: 100dvh;
    background: url(../images/crew/background-crew-desktop.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    color:var(--secondary-color);
    position: relative;
    overflow: hidden;
    display: grid;
    justify-content: center;
    align-items: end;
    
   
}


.content{
    display: flex;
    width: 100vw;
    height: 50%;
    margin-bottom: 0;
    margin: 0;
    height: 90%;
    
   
}

.main-content{
    width: 35%;
    padding-top: 3%;
    display:flex;
    flex-direction: column;
    gap: 100px;
    margin-left: 10%;
    position: relative;
}
.crew-image{
    display: flex;
    align-items: flex-end;
    width: 30%;
}

.crew-image img{
    height: 95%;
}

.description-wrapper{
    flex:1; /*makes the element fill the rest of the container*/
    display: flex;
    flex-direction: column;
}

.crew-position{
    margin-bottom: 0;
    color: #979797;
    
}

.crew-name{
    margin-top: 15px;
    margin-bottom: 15px;
}
.crew-info{
width: 70%;
color: var(--secondary-color);
height: 200px;
}

.current-crew{
    list-style: none;
    display: flex;
    gap: 24px;
   /* position: absolute;
   left: 0px;
   bottom: 300px; */
   margin: 0;
   margin-top: 0;
   padding: 0;
}

.current-crew li{
    background-color: #979797;
    border-radius: 50%;
    width: 15px;
    height: 15px;
}
.current-crew li:hover{
    cursor: pointer;
}
.current-crew .selected{
    background-color: var(--main-color);

}

.crew-description{
    display: none;
}

.visible{
    display: block;
}

/* Responsive css */

/* layout for tablets */
@media (max-width:912px){
    body{
        background-image: url(../images/crew/background-crew-tablet.jpg);
        display: grid;
        justify-content: center;
        align-items: start;
    }
    .content{
        flex-direction: column;
        width: 70vw;
        margin-bottom: 0;
        margin: 0;
        height: 100%;
        /* justify-content: center;
        align-items: center; */
        
       
    }
    .main-content{
        width: 100%;
        padding: 0;
        /* border: 1px solid red; */
        gap: 5px;
        margin: 0;
        margin-top: 125px;
        position: inherit;
        
    }

    .crew-image{
        /* border: 1px solid blue; */
        width: 572px;
        height: 476px;
        
    }

    .header h4{
        margin: 0;
        padding: 0;
        position: absolute;
        top:90px;
        left: 0;
        font-size: 20px;
    }
    .crew-position{
        margin: 0;
        text-align: center;
        font-size: 24px;
    }
    .crew-name{
        text-align: center;
        font-size: 40px;
    }
    .crew-info{
        text-align: center;
        margin: 0;
        width: 100%;
        height: 10%;
        font-size: 16px;
    }
    .current-crew{
        justify-content: center;
        align-items: center;
        margin-top: 5px;
    }
    .crew-image{
        justify-content: center;
        align-items: center;
    }
    .current-crew li{
        width: 10px;
        height: 10px;
    }
}


/*mobile*/

@media (max-width: 480px){
    body{
        background-image: url(../images/crew/background-crew-mobile.jpg);
        
    }
    .header h4{
        width: 100vw;
        text-align: center;
    }
    .crew-position{
        margin-top: 50px;
        font-size: 16px;
    }
    .crew-name{
        font-size: 24px;
    }
    .crew-info{
        font-size: 15px;
    }

    .crew-image img{
        height: 350px;
        width: 250px;
    }
    .crew-image{
        border-bottom: 1px solid rgba(255,255,255,0.2);
    }
    .content{
        flex-direction: column-reverse;
        margin-top: 0;
        justify-content: center;
    }
    .main-content{
        margin-top: 0px;  
    }
    .description-wrapper{
        position: relative;
    }
    .current-crew{
        position: absolute;
        top: 0;
        width: 100%;
    }
}

